--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <tr>
         <th>City</th>
         <th>State</th>
-        <th>2017 <br> estimate</th>
+        <th>2017 estimate</th>
       </tr>
       <tr>
         <td>New York</td>
@@ -21,8 +21,8 @@
       </tr>
       <tr>
         <td>Los Angeles</td>
-        <td>Carlifonia</td>
-        <td>3,333,795</td>
+        <td>California</td>
+        <td>3,999,759</td>
       </tr>
       <tr>
         <td>Chicago</td>
